--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "build": "webpack --mode=production",
     "watch": "webpack --watch --mode=development",
-    "start": "webpack-dev-server --open --mode=development"
+    "start": "webpack-dev-server --open --mode=development",
+    "nodemon": "nodemon ./server/server.js"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "mini-css-extract-plugin": "^0.7.0",
     "minimist": "^1.2.0",
     "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.33.0",
@@ -37,8 +39,12 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^3.18.0",
+    "morgan": "^1.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
   }
