--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "frontend-boilerplate",
+  "name": "guess-draw",
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.js",
   "babel": {
     "presets": [
-      "@babel/preset-env",
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "10"
+          }
+        }
+      ],
       "@babel/preset-react"
     ]
   },
   "scripts": {
+    "test": "jest",
     "build": "webpack --mode=production",
     "watch": "webpack --watch --mode=development",
     "start": "webpack-dev-server --open --mode=development",
@@ -26,10 +34,13 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.8.0",
+    "jest-cli": "^24.8.0",
     "mini-css-extract-plugin": "^0.7.0",
     "minimist": "^1.2.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
+    "puppeteer": "^1.17.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.33.0",
